manifests/ssl-enabled/manifests.yaml
---
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  namespace: amqbroker-dev-openwire
  name: openwire
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: <route-url>
  to:
    kind: Service
    name: service-openwire
    weight: 100
  port:
    targetPort: amqp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
